--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
-h1 {
-    
-}
+input:invalid {
+    border-color: #900;
+    background-color: #fdd;
+  }
+  
+  input:focus:invalid {
+    outline: none;
+  }
+
+  
